test/errors/member_access_on_int.haste
const x: int = 5;
const a = x.foo;
